--- a/Front-End-Certification/Project1-Tribute_Page/index.html
+++ b/Front-End-Certification/Project1-Tribute_Page/index.html
@@ -7,6 +7,31 @@
   </head>
   <body>
 
+    <div id="main">
+      <div class="title-div">
+        <h1 id="title">Jack Nicholson</h1>
+      </div>
+
+
+      <div id="img-div">
+        <img src="Jack-Nicholson.jpg" id='image'>
+        <div id="img-caption">picture of jack Nicholson with glasses</div>
+      </div>
+
+      <div id="tribute-info">
+        <!-- Insert infos on Jack Nicholson -->
+<br><br><br>
+        <p>John Joseph Nicholson (born April 22, 1937) is an American actor and filmmaker who has performed for over sixty years. He is known for playing a wide range of starring or supporting roles, including satirical comedy, romance, and dark portrayals of anti-heroes and villainous characters. In many of his films, he has played the "eternal outsider, the sardonic drifter", someone who rebels against the social structure.</p> <br><br><br>
+
+        <p>His most known and celebrated films include the road drama Easy Rider (1969); the dramas Five Easy Pieces (1970) and One Flew Over the Cuckoo's Nest (1975); the comedy-dramas The Last Detail (1973), Terms of Endearment (1983), As Good as It Gets (1997), About Schmidt (2002), and The Bucket List (2007); the neo-noir mystery Chinatown (1974); the horror film The Shining (1980); the biopic Reds (1981); the fantasy comedy The Witches of Eastwick (1987); the superhero film Batman (1989) as the Joker; the legal drama A Few Good Men (1992); the romantic horror film Wolf (1994); the science fiction comedy Mars Attacks! (1996); the comedy Anger Management (2003); the romantic comedy Something's Gotta Give (2003); and the crime drama The Departed (2006). Nicholson has not acted in a film since How Do You Know in 2010, but does not consider himself to be retired. He has also directed three films, including The Two Jakes (1990), the sequel to Chinatown. </p> br
+        <br><br>
+
+        <p> More information on Jack Nicholson available on <a id='tribute-link' href="https://en.wikipedia.org/wiki/Jack_Nicholson" target="_blank">his wikipedia page </a></p>
+      </div>
+
+<br><br><br>
+    </div>
+
 
     <script src="main.js" charset="utf-8"></script>
   </body>
