--- a/Front-End-Certification/Project3-Product_Landing_Page/index.html
+++ b/Front-End-Certification/Project3-Product_Landing_Page/index.html
@@ -7,6 +7,42 @@
   </head>
   <body>
 
+    <header id="header">
+      <img src="./header-img.png" alt="" id="header-img">
+      <nav id="nav-bar">
+        <a href="#form" class="nav-link">Submit your email</a>
+        <a href="#history" class="nav-link">History</a>
+        <a href="#video" class="nav-link">Video</a>
+      </nav>
+    </header>
+
+    <main>
+
+      <form id="form" method="post" action="https://www.freecodecamp.com/email-submit">
+        <input type="email" id="email" name="email" value="" placeholder="Enter your email">
+        <input type="submit" name="submit" id="submit">submit</input>
+      </form>
+
+      <div class="history" id="history">
+
+        <p>A book is both a usually portable physical object and the body of immaterial representations or intellectual object whose material signs—written or drawn lines or other two-dimensional media—the physical object contains or houses.
+
+As a physical object, a book is a stack of usually rectangular pages (made of papyrus, parchment, vellum, or paper) oriented with one side (either left or right, depending on the direction in which one reads a script) tied, sewn, or otherwise fixed together and then bound to the flexible spine of a protective cover of heavier, relatively inflexible material so that, when the opened front cover has received a massy enough stack of sheets, the book can lie flat.[1] The technical term for this physical arrangement is codex (in the plural, codices). In the history of hand-held physical supports for extended written compositions or records, the codex replaces its immediate predecessor, the scroll. A single sheet in a codex is a leaf, and each side of a leaf is a page.
+
+As an intellectual object, a book is prototypically a composition of such great length that it takes a considerable investment of time to compose and a still considerable, though not so extensive, investment of time to read. This sense of book has a restricted and an unrestricted sense. In the restricted sense, a book is a self-sufficient section or part of a longer composition, a usage that reflects the fact that, in antiquity, long works had to be written on several scrolls, and each scroll had to be identified by the book it contained. So, for instance, each part of Aristotle's Physics is called a book, as of course the Bible encompasses many different books. In the unrestricted sense, a book is the compositional whole of which such sections, whether called books or chapters or parts, are parts.
+
+But the intellectual content in a physical book need not be a composition, or can be called a book. Books can consist only of drawings, engravings, or photographs, or such things as crossword puzzles or cut-out dolls. In a physical book the pages can be left blank or can feature an abstract set of lines as support for on-going entries, i.e., an account book, an appointment book, a log book, an autograph book, a notebook, a diary or day book, or a sketch book. Some physical books are made with pages thick and sturdy enough to support other physical objects, like a scrapbook or photograph album. Books may be distributed in electronic form as e-books and other formats.
+
+Although in ordinary academic parlance a monograph is understood to be a specialist academic work, rather than a reference work on a single scholarly subject, in library and information science monograph denotes more broadly any non-serial publication complete in one volume (book) or a finite number of volumes (even a novel like Proust's seven-volume In Search of Lost Time), in contrast to serial publications like a magazine, journal, or newspaper. An avid reader or collector of books or a book lover is a bibliophile or colloquially, "bookworm". A shop where books are bought and sold is a bookshop or bookstore. Books are also sold elsewhere. Books can also be borrowed from libraries. Google has estimated that as of 2010, approximately 130,000,000 distinct titles had been published.[2] In some wealthier nations, the sale of printed books has decreased because of the use of e-books,[3] though sales of e-books declined in the first half of 2015.[4] </p>
+
+      </div>
+
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/r--wz576ke0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </main>
+
+
+
 
     <script src="main.js"></script>
   </body>
