--- a/Front-End-Certification/Project4-Technical_Documentation_page/index.html
+++ b/Front-End-Certification/Project4-Technical_Documentation_page/index.html
@@ -7,5 +7,100 @@
   </head>
   <body>
 
+
+    <nav id="navbar">
+      <header>
+        <h2>Javascript documentation</h2>
+      </header>
+      <a href="#Introduction" class="nav-link">Introduction</a>
+      <a href="#JavaScript_and_Java" class="nav-link">Javascript and Java</a>
+      <a href="#Hello_world" class="nav-link">Hello world</a>
+      <a href="#Variables" class="nav-link">Variables</a>
+      <a href="#Declaring_variables" class="nav-link">Declaring variables</a>
+    </nav>
+
+
+
+    <main id="main-doc">
+      <section class='main-section' id='Introduction'>
+        <header>
+          <h2>Introduction</h2>
+        </header>
+        <div class="content">
+          <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
+          <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements.</p>
+          <ul>
+            examples
+            <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
+            <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class='main-section' id='JavaScript_and_Java'>
+        <header>
+          <h2>JavaScript and Java</h2>
+        </header>
+        <div class="content">
+          <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
+          <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values.</p>
+          <p>JavaScript has a prototype-based object model instead of the more common class-based object model.</p>
+        </div>
+      </section>
+
+      <section class='main-section' id='Hello_world'>
+        <header>
+          <h2>Hello world</h2>
+        </header>
+        <div class="content">
+
+          <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code: </p>
+          <code>function greetMe(yourName) {
+                alert("Hello " + yourName);
+              }
+              greetMe("World");</code>
+
+        </div>
+      </section>
+
+      <section class='main-section' id='Variables'>
+        <header>
+          <h2>Variables</h2>
+        </header>
+        <div class="content">
+          <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules. </p>
+        </div>
+      </section>
+
+      <section class='main-section' id='Declaring_variables'>
+        <header>
+          <h2>Declaring variables</h2>
+        </header>
+        <div class="content">
+          <p>You can declare a variable in three ways:
+
+            With the keyword var. For example, </p>
+        <code>var x = 42.</code>
+        <p>This syntax can be used to declare both local and global variables.</p>
+
+            <p>By simply assigning it a value. For example: </p>
+        <code>x = 42.</code>
+        <code>x = 46.</code>
+        <code>x = 54.</code>
+
+        <p>variables can be declared with : </p>
+        <ul>
+          <li>var</li>
+          <li>let</li>
+          <li>const</li>
+        </ul>
+
+
+        </div>
+
+      </section>
+
+    </main>
+
   </body>
 </html>
